whole posts in the list

--- a/qdrant-landing/themes/qdrant/layouts/partials/blog-sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/blog-sidebar.html
@@ -15,7 +15,7 @@
         <div class="news-widget sidebar-widget">
             <div class="inner-box">
                 <div class="image">
-                    <a href="{{ $link }}"><img src="https://via.placeholder.com/370x223"
+                    <a href="{{ $link }}"><img src="{{ .Params.preview_image}}"
                                                alt=""/></a>
                 </div>
                 <div class="lower-content">
