--- a/qdrant-landing/themes/qdrant/layouts/partials/blogpost-preview.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/blogpost-preview.html
@@ -7,31 +7,28 @@
 <div class="news-block-two">
     <div class="inner-box">
         <div class="upper-box">
-            <h4><a href="{{ $link }}">{{ .Title }}</a></h4>
-        </div>
-        <div class="image">
-            <a href="{{ $link }}"><img src="{{ .Params.preview_image }}"
-                                       alt=""/></a>
-        </div>
-        <div class="lower-box">
-            {{ if .Params.short_description }}
-            <p>{{ .Params.short_description | markdownify }}</p>
-            {{ end }}
+            <h2>{{ .Title }}</h2>
             <div class="clearfix">
                 <div class="pull-left">
                     <ul class="post-meta">
-                        <li><span class="fa fa-user mr-1"></span>{{ .Params.author
-                            }}
+                        {{ if .Params.author }}
+                        <li><span class="fa fa-user mr-1"></span>{{ .Params.author }}
+                            {{ end }}
                         </li>
-                        <li><span class="fa fa-calendar mr-1"></span>{{ .Date.Format "January 2, 2006" }}
+                        <li><span class="fa fa-calendar mr-1"></span>{{ .Date | time.Format ":date_long" }}
                         </li>
                     </ul>
                 </div>
-                <div class="pull-right">
-                    <a href="{{ $link }}" class="theme-btn btn-style-five"><span
-                            class="txt">Learn More...</span></a>
-                </div>
             </div>
+        </div>
+        {{ if .Params.preview_image }}
+        <div class="image">
+            <img src="{{ .Params.preview_image }}" alt=""/>
+        </div>
+        {{ end }}
+        <div class="lower-box">
+            <p>{{ .Content }}</p>
+
         </div>
     </div>
 </div>
