--- a/qdrant-landing/themes/qdrant/static/css/article.css
+++ b/qdrant-landing/themes/qdrant/static/css/article.css
@@ -13,10 +13,22 @@ article ul {
     margin-bottom: 1em;
 }
 
-article ul li {
-  list-style: circle;
-  padding: 0;
-  margin: 0em 0em 0em 2em;
+article ul>li {
+ list-style: none;
+ margin: 0em 0em 0em 2em;
+ padding-left: 10px;
+ position: relative;
+}
+
+article ul>li:before {
+ position: absolute;
+ content: '';
+ left: 0;
+ top: calc(50% - 2px);
+ width: 4px;
+ height: 4px;
+ border-radius: 50px;
+ background-color: var(--dark);
 }
 
 article h1 {
