--- a/qdrant-landing/themes/qdrant/layouts/blog/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/blog/single.html
@@ -7,38 +7,85 @@
 
         <!-- Content Side -->
         <div class="content-side col-lg-8 col-md-12 col-sm-12">
-            <div class="blog-detail">
+<!--            <div class="blog-detail">-->
+<!--                <div class="inner-box">-->
+<!--                    <div class="upper-box">-->
+
+<!--                        <h4>{{ .Params.Title }}</h4>-->
+<!--                    </div>-->
+<!--                    <div class="image">-->
+<!--                       <img src="{{ .Params.preview_image}}" alt=""/>-->
+<!--                    </div>-->
+<!--                    <div class="lower-box">-->
+<!--                        <ul class="post-meta">-->
+<!--                            <li><span class="icon flaticon-user-1"></span>{{ .Params.author }}</li>-->
+<!--                            <li><span class="icon flaticon-calendar"></span>{{ .Date | time.Format ":date_long" }}</li>-->
+<!--                            <li>-->
+<!--                            {{ range .Params.Categories }}-->
+<!--                            <a class="category" href='{{ "/categories/" | relLangURL }}{{ . | urlize }}'>{{ . }}</a>-->
+<!--                            {{ end }}-->
+<!--                            </li>-->
+<!--                        </ul>-->
+<!--                        <article>-->
+<!--                            {{ .Content }}-->
+<!--                        </article>-->
+<!--                    </div>-->
+
+<!--                    &lt;!&ndash; Post Share Options &ndash;&gt;-->
+<!--                    <div class="post-share-options">-->
+<!--                        <ul class="social-box">-->
+<!--                            <span class="share">Share on this article <i class="flaticon-right-arrow-2"></i></span>-->
+<!--                            <li><a href="#"><span class="fa fa-facebook-f"></span></a></li>-->
+<!--                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>-->
+<!--                            <li><a href="#"><span class="fa fa-linkedin"></span></a></li>-->
+<!--                        </ul>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+            <div class="news-block-two blog-detail">
                 <div class="inner-box">
-                    <div class="upper-box">
+                    <div class="upper-box pb-3">
+                        <h2>{{ .Title }}</h2>
+                    </div>
+                    <div class="lower-box pt-0">
+                        <article>{{ .Content }}</article>
+                        <div class="clearfix">
+                            <div class="pull-left">
+                                <ul class="post-meta">
+                                    {{ if .Params.author }}
+                                    <li><span class="fa fa-user mr-1"></span>{{ .Params.author }}
+                                        {{ end }}
+                                    </li>
+                                    <li><span class="fa fa-calendar mr-1"></span>{{ .Date | time.Format ":date_long" }}
+                                    </li>
+                                    <li>
 
-                        <h4>{{ .Params.Title }}</h4>
-                    </div>
-                    <div class="image">
-                       <img src="{{ .Params.preview_image}}" alt=""/>
-                    </div>
-                    <div class="lower-box">
-                        <ul class="post-meta">
-                            <li><span class="icon flaticon-user-1"></span>{{ .Params.author }}</li>
-                            <li><span class="icon flaticon-calendar"></span>{{ .Date | time.Format ":date_long" }}</li>
-                            <li>
-                            {{ range .Params.Categories }}
-                            <a class="category" href='{{ "/categories/" | relLangURL }}{{ . | urlize }}'>{{ . }}</a>
-                            {{ end }}
-                            </li>
-                        </ul>
-                        <article>
-                            {{ .Content }}
-                        </article>
-                    </div>
+                                        <!-- Post Share Options -->
+                                        <div class="post-share-options">
+                                            <ul class="social-box">
+                                                <span class="share">Share on this article:</i></span>
+                                                <li><a href="#"><span class="fa fa-facebook-f"></span></a></li>
+                                                <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                                                <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
+                                            </ul>
+                                        </div>
 
-                    <!-- Post Share Options -->
-                    <div class="post-share-options">
-                        <ul class="social-box">
-                            <span class="share">Share on this article <i class="flaticon-right-arrow-2"></i></span>
-                            <li><a href="#"><span class="fa fa-facebook-f"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
-                        </ul>
+                                    </li>
+                                </ul>
+                                <ul class="post-meta">
+                                    <li>Category:
+                                        {{ range .Params.Categories }}
+                                        <a class="category" href='{{ "/categories/" | relLangURL }}{{ . | urlize }}'>{{ . }}</a>
+                                        {{ end }}
+                                    </li>
+                                    <li>Tags:&nbsp;
+                                        {{ range .Params.Tags }}
+                                        <a class="category" href='{{ "/categories/" | relLangURL }}{{ . | urlize }}'>#{{ . }}</a>&nbsp;
+                                        {{ end }}
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
