--- a/qdrant-landing/themes/qdrant/layouts/partials/sidebar-list.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/sidebar-list.html
@@ -13,7 +13,7 @@
                         <div class="our-blogs">
                             {{ range .Pages }}
 
-                            {{ partial "blogpost-preview" . }}
+                            {{ partial "blogpost" . }}
 
                             {{ end }}
                         </div>
