--- a/qdrant-landing/themes/qdrant/layouts/partials/blogpost.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/blogpost.html
@@ -27,9 +27,9 @@
                             <div class="post-share-options">
                                 <ul class="social-box">
                                     <span class="share">Share on this article:</span>
-                                    <li><a href="#"><span class="fa fa-facebook-f"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
+                                    <li><a href="https://www.facebook.com/sharer/sharer.php?u={{ $link }}"><span class="fa fa-facebook-f"></span></a></li>
+                                    <li><a href="https://twitter.com/intent/tweet?url={{ $link }}&text={{ .Title }}"><span class="fa fa-twitter"></span></a></li>
+                                    <li><a href="https://www.linkedin.com/sharing/share-offsite/?url={{ $link }}"><span class="fa fa-linkedin"></span></a></li>
                                 </ul>
                             </div>
 
