--- a/qdrant-landing/themes/qdrant/layouts/partials/blogpost.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/blogpost.html
@@ -43,7 +43,7 @@
                         </li>
                         <li>Tags:&nbsp;
                             {{ range .Params.Tags }}
-                            <a class="category" href='{{ "/categories/" | relLangURL }}{{ . | urlize }}'>#{{ . }}</a>&nbsp;
+                            <a class="category" href='{{ "/tags/" | relLangURL }}{{ . | urlize }}'>#{{ . }}</a>&nbsp;
                             {{ end }}
                         </li>
                     </ul>
