--- a/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
@@ -26,3 +26,14 @@
       "keywords" : [ {{ range .Site.Params.Keywords }}"{{ . }}", {{ end }} "Qdrant" ]
   }
 </script>
+
+<meta property="og:url" content="{{ .Permalink }}">
+{{ if or ( and (.IsPage) (eq $.Section "blog") ) ( and ($.IsNode) (eq $.Section "") ) }}
+<meta property="og:title" content="{{ .Title }}">
+{{ else }}
+<meta property="og:title" content="Qdrant - {{ .Title }}">
+{{ end }}
+<meta property="og:description" content="{{ if .Description }}{{ .Description }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ end }}{{ end }}">
+{{ if .Params.preview_image }}
+<meta property="og:image" content="{{ path.Join .Site.BaseURL .Params.preview_image }}">
+{{ end }}
