moved css for information aside blocks to the article file

--- a/qdrant-landing/themes/qdrant/static/css/article.css
+++ b/qdrant-landing/themes/qdrant/static/css/article.css
@@ -43,3 +43,46 @@ article p {
     line-height: 1.8em;
     margin-bottom: 0.7rem;
 }
+
+article aside[role="alert"],
+article aside[role="status"] {
+ border: 1px solid transparent;
+ position: relative;
+ padding: .75rem 1.25rem .75rem 3rem;
+ margin-bottom: 1rem;
+ border-radius: 0.25rem;
+}
+
+article aside[role="alert"] {
+ color: var(--brand-primary);
+ background-color: #FBBFBF;
+ border-color: #fdb8b8;
+}
+
+article aside[role="alert"]:before,
+article aside[role="status"]:before {
+ width: 3rem;
+ position: absolute;
+ top: calc(50% - 0.75rem);
+ left: 0;
+ font-size: 1rem;
+ text-align: center;
+}
+
+article aside[role="alert"]:before {
+ content: "\f071";
+ font-family: "FontAwesome";
+ font-size: 1rem;
+}
+
+article aside[role="status"] {
+ color: var(--brand-secondary);
+ background-color: #d1ecf1;
+ border-color: #bee5eb;
+}
+
+article aside[role="status"]:before {
+ content: "\f129";
+ font-family: "FontAwesome";
+ font-size: 1rem;
+}
