--- a/qdrant-landing/themes/qdrant/layouts/partials/blogpost.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/blogpost.html
@@ -15,27 +15,18 @@
             <div class="clearfix">
                 <div class="pull-left">
                     <ul class="post-meta">
-                        {{ if .Params.author }}
-                        <li><span class="fa fa-user mr-1"></span>{{ .Params.author }}
-                            {{ end }}
-                        </li>
-                        <li><span class="fa fa-calendar mr-1"></span>{{ .Date | time.Format ":date_long" }}
-                        </li>
+                        {{ if and .Params.author .Params.author_link }}
                         <li>
-
-                            <!-- Post Share Options -->
-                            <div class="post-share-options">
-                                <ul class="social-box">
-                                    <span class="share">Share on this article:</span>
-                                    <li><a href="https://www.facebook.com/sharer/sharer.php?u={{ $link }}"><span class="fa fa-facebook-f"></span></a></li>
-                                    <li><a href="https://twitter.com/intent/tweet?url={{ $link }}&text={{ .Title }}"><span class="fa fa-twitter"></span></a></li>
-                                    <li><a href="https://www.linkedin.com/sharing/share-offsite/?url={{ $link }}"><span class="fa fa-linkedin"></span></a></li>
-                                </ul>
-                            </div>
-
+                            <a href="{{ .Params.author_link }}" target="_blank">
+                                <span class="fa fa-user mr-1"></span>{{ .Params.author }}
+                            </a>
                         </li>
-                    </ul>
-                    <ul class="post-meta">
+                        {{ else if and .Params.author (ne .Params.author_link) }}
+                        <li>
+                            <span class="fa fa-user mr-1"></span>{{ .Params.author }}
+                        </li>
+                        {{ end }}
+
                         <li>Category:
                             {{ range .Params.Categories }}
                             <a class="category" href='{{ "/categories/" | relLangURL }}{{ . | urlize }}'>{{ . }}</a>
@@ -45,6 +36,26 @@
                             {{ range .Params.Tags }}
                             <a class="category" href='{{ "/tags/" | relLangURL }}{{ . | urlize }}'>#{{ . }}</a>&nbsp;
                             {{ end }}
+                        </li>
+                    </ul>
+                    <ul class="post-meta">
+                        <li><span class="fa fa-calendar mr-1"></span>{{ .Date | time.Format ":date_long" }}
+                        </li>
+                        <li>
+                            <!-- Post Share Options -->
+                            <div class="post-share-options">
+                                <ul class="social-box">
+                                    <span class="share">Share on this article:</span>
+                                    <li><a href="https://www.facebook.com/sharer/sharer.php?u={{ $link }}"><span
+                                            class="fa fa-facebook-f"></span></a></li>
+                                    <li>
+                                        <a href="https://twitter.com/intent/tweet?url={{ $link }}&text={{ .Title }}"><span
+                                                class="fa fa-twitter"></span></a></li>
+                                    <li><a href="https://www.linkedin.com/sharing/share-offsite/?url={{ $link }}"><span
+                                            class="fa fa-linkedin"></span></a></li>
+                                </ul>
+                            </div>
+
                         </li>
                     </ul>
                 </div>
