--- a/qdrant-landing/themes/qdrant/layouts/partials/js.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/js.html
@@ -1,12 +1,3 @@
-<!-- highlight.js -->
-{{ if .Site.Params.highlight }}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"></script>
-    {{ range .Site.Params.highlightLanguages }}
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/languages/{{ . }}.min.js"></script>
-    {{ end }}
-    <script>hljs.highlightAll();</script>
-{{ end }}
-
 <script src="{{ "js/jquery.js" | absURL }}"></script>
 <script src="{{ "js/popper.min.js" | absURL }}"></script>
 <script src="{{ "js/jquery.scrollTo.js" | absURL }}"></script>
@@ -30,10 +21,8 @@
 <script src="{{ "js/anchor.min.js" | absURL }}"></script>
 <script>
   var clipboard = new ClipboardJS('.copy-btn');
-  $('.alert').hide();
 
   clipboard.on('success', function(e) {
-    // $('.alert').alert().show().addClass('show');
     $('#copy-popover').popover('show')
     const to = setTimeout(() => {
       $('#copy-popover').popover('hide')
@@ -48,7 +37,7 @@
     console.error('Trigger:', e.trigger);
   });
 
-  $(function(){
+  $(function () {
     $.cookit({
       messageText: "{{ .Site.Params.gdpr }}",
       linkText: "Learn more",
@@ -64,3 +53,15 @@
   anchors.options.placement = 'left';
   anchors.add("article > :is(h1, h2, h3, h4, h5, h6)");
 </script>
+
+<!-- highlight.js -->
+{{ if .Site.Params.highlight }}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"></script>
+    {{ range .Site.Params.highlightLanguages }}
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/languages/{{ . }}.min.js"></script>
+    {{ end }}
+<script>hljs.highlightAll();</script>
+
+{{ end }}
+<script src="{{ "js/lang-switcher.js" | absURL }}"></script>
+<script src="{{ "js/copy-code.js" | absURL }}"></script>
