--- a/qdrant-landing/themes/qdrant/layouts/partials/blogpost.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/blogpost.html
@@ -45,7 +45,7 @@
                             <!-- Post Share Options -->
                             <div class="post-share-options">
                                 <ul class="social-box">
-                                    <span class="share">Share on this article:</span>
+                                    <span class="share">Share this post:</span>
                                     <li><a href="https://www.facebook.com/sharer/sharer.php?u={{ $link }}"><span
                                             class="fa fa-facebook-f"></span></a></li>
                                     <li>
