--- a/qdrant-landing/themes/qdrant/layouts/articles/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/articles/list.html
@@ -30,7 +30,20 @@
                             <div class="clearfix">
                                 <h5>{{ .Title }}</h5>
                                 <p>{{ .Params.short_description | markdownify }}</p>
-                                <div class="pull-right">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="d-flex align-self-stretch align-items-center">
+                                        {{ if and .Params.author .Params.author_link }}
+                                        <li>
+                                            <a href="{{ .Params.author_link }}" target="_blank">
+                                                <span class="fa fa-user mr-1"></span>{{ .Params.author }}
+                                            </a>
+                                        </li>
+                                        {{ else if and .Params.author (not .Params.author_link) }}
+                                        <li>
+                                            <span class="fa fa-user mr-1"></span>{{ .Params.author }}
+                                        </li>
+                                        {{ end }}
+                                    </div>
                                     <a href="{{ $link }}" target="_blank" class="theme-btn btn-style-five btn-small">
                                         <span class="txt">Read</span>
                                     </a>
