--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -49,6 +49,8 @@
         <!--[if lt IE 9]>
         <script src="js/respond.js"></script><![endif]-->
 
+        <!-- Netlify CMS -->
+        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     </head>
 
     <body>
