--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -50,7 +50,7 @@
         <script src="js/respond.js"></script><![endif]-->
 
         <!-- Netlify CMS -->
-        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+        <!-- <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script> -->
     </head>
 
     <body>
