--- a/qdrant-landing/themes/qdrant/layouts/partials/sidebar-list.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/sidebar-list.html
@@ -13,13 +13,14 @@
                         {{ $paginator := .Paginate (where .Pages "Section" "blog") 5 }}
                         <div class="our-blogs">
                             {{ range $paginator.Pages}}
+                            {{ .Scratch.Set "scope" "list" }}
 
                             {{ partial "blogpost" . }}
 
                             {{ end }}
 
                             {{ if gt $paginator.TotalPages 1}}
-                                {{ partial "paginator" $paginator }}
+                            {{ partial "paginator" $paginator }}
                             {{ end }}
                         </div>
                     </div>
