Article on coffee anomalies (#5)
* Draft article on coffee anomalies

* Apply grammarly

* Handle reviews and suggestions

* add training schema image

* anomalies detection solutions image

* upd image

* upd article

* upd preview

* Add agit add .

* Add author

* removed an article width, we already have an updated template for articles

* fixed separator

* Update detecting-coffee-anomalies.md

Co-authored-by: Andrey Vasnetsov <andrey@vasnetsov.com>
Co-authored-by: trean <trean.mi@gmail.com>

--- a/qdrant-landing/themes/qdrant/static/css/article.css
+++ b/qdrant-landing/themes/qdrant/static/css/article.css
@@ -60,6 +60,10 @@ article p {
     margin-bottom: 0.7rem;
 }
 
+article figure {
+  text-align: center;
+}
+
 article aside[role="alert"],
 article aside[role="status"] {
  border: 1px solid transparent;
