--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -17,10 +17,10 @@
                 <br/>
                 
 
-                <div class="code mt-3">
-                  <code id="copy-code">docker pull qdrant/qdrant</code>
-                  <span class="d-inline-block" id="copy-popover" data-toggle="popover" data-content="Text copied!">
-                    <button class="copy-btn lead ml-2" data-clipboard-target="#copy-code" title="Copy code">
+                <div class="hero-code mt-3">
+                  <code id="copy-code" class="hero-code__text">docker pull qdrant/qdrant</code>
+                  <span class="copy-code" id="copy-popover" data-toggle="popover" data-content="Text copied!">
+                    <button class="copy-code__btn copy-code__btn_light hero-code__btn lead ml-2" data-clipboard-target="#copy-code" title="Copy code">
                       <i class="flaticon-copy"></i>
                     </button>
                   </span>
