--- a/qdrant-landing/themes/qdrant/static/css/blocks/copy-btn.css
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/copy-btn.css
@@ -1,8 +1,6 @@
-/*.copy-btn {*/
-/*	cursor: pointer;*/
-/*	color: white;*/
-/*	background: transparent;*/
-/*}*/
+/* copy button for documentation */
+
+/* ##bem */
 
 .copy-code {
 	position: absolute;
