--- a/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/seo_schema.html
@@ -39,20 +39,27 @@
 <meta property="og:url" content="{{ .Permalink }}">
 <meta property="og:type" content="website">
 <meta property="og:title" content="{{ $title }}">
-<meta property="og:description" content="{{ .Description }}">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="{{ $domain }}">
 <meta property="twitter:url" content="{{ .Permalink }}">
 <meta name="twitter:title" content="{{ $title }}">
+
+{{ if .Description }}
+<meta property="og:description" content="{{ .Description }}">
 <meta name="twitter:description" content="{{ .Description }}">
+{{ else }}
+<meta property="og:description" content="{{ .Site.Params.description }}">
+<meta name="twitter:description" content="{{ .Site.Params.description }}">
+{{ end }}
 
 <!-- Image -->
 {{ if .Params.preview_image }}
 <meta name="og:image" content="{{ .Params.preview_image | relURL }}">
 <meta name="twitter:image" content="{{ .Params.preview_image | relURL }}">
+<meta content="my-check!!">
 {{ else }}
-<meta name="og:image" content="{{ .Site.Params.preview_img | relURL }}">
-<meta name="twitter:image" content="{{ .Site.Params.preview_img | relURL }}">
+<meta name="og:image" content="{{ .Site.Params.preview_image | relURL }}">
+<meta name="twitter:image" content="{{ .Site.Params.preview_image | relURL }}">
 {{ end }}
